# polycentric

./: .docker-bashrc  .env.development  .env.example  .env.production  .gitignore  .gitlab-ci.yml  .prettierrc.json  CACHING.md  Caddyfile  Caddyfile.development  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  default.vcl  dev-desktop.Dockerfile  dev-server.Dockerfile  dev-web.Dockerfile  docker-compose.dev-watch.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  forum.dockerfile  forum_server.dockerfile  introduction.md  package-lock.json  package.json  quickstart.sh  server.dockerfile  server.dockerfile.dockerignore  update-dev-container.sh  version.sh  web.dockerfile
client-lib/: Cargo.toml
client-lib/src/: api_methods.rs  lib.rs
dm_server/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  example.env  tests_README.md
dm_server/.sqlx/: query-204d80071249a7c5cba5c894e523e81f580187f66ba8d7c6e8cdaae50705199d.json  query-38b2668f8dfc594260a41a1aeeedcd846bd6f561ae762cf760e65276cca559cd.json  query-691ff3150f6b8f095c6a50931dd931833c3ff8f4601950585cd181fd19981d5a.json  query-6cf8e3dd82f3dab1d454fc54f4343d391acce9bf381389a2354673051ae078af.json  query-6d7d199881796916d96058746cc8b104d6dfd3ef3a751f6ea84c0babec2302a4.json  query-807796ef1488fcb03a308c981d0d120f816852f922a4356a341a9f8483a0bd13.json  query-ac25e09944201d9bf94e721438355cd24f94a1d358985ec6d454645f073a8090.json  query-b0b898cbce120388eac0c8904ae39855cb80e5056664e9ebc3dbfe32cf5f8d23.json  query-b85115ae3d183681e2689266448173c7d43634f1ad119f22ace0f5af78a4f8fb.json  query-c0da42f9d94ff84b97d6181d599a076c9af934f8c1e8e32d041a90ca89bcd72d.json  query-ca2a38f9f19867cc7656392b00aeb522d066c36f3b581828cd600085bc00c3af.json  query-d08d09620eb6ffe16b05e5dec1bcd9d32a9c05c106b470d3f7269a98f1eca6ab.json  query-d66637e1021445512d05022c3cf5fe96ec5ae65db423e6851bccaffea833ba11.json  query-de84e4e8600fc8e986cdd32627329084ecf47a2c86470e78a55e4c5355ad04f9.json  query-e4cc28e4dfde6bac8c0231b72679568f417acfe817dd62c876789aec0d557300.json  query-fe6aaaa6aafe79018536f5734637dd5711e1b21682ff8591b355ca2dde1fa25f.json
dm_server/migrations/: 001_initial_schema.sql  002_fix_nonce_length.sql  003_add_encryption_algorithm.sql
dm_server/src/: config.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs
dm_server/src/handlers/: auth.rs  dm.rs  keys.rs  mod.rs
dm_server/src/websocket/: connection.rs  manager.rs  mod.rs
dm_server/tests/: api_tests.rs  auth_tests.rs  common.rs  crypto_tests.rs  db_tests.rs  integration_tests.rs  websocket_tests.rs
forum_server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
forum_server/.sqlx/: query-080269e42663897b88901156244c594c24f335a48b81744e2cbce2bdc4a11095.json  query-13be1a7658a1ed1e3f146600884cb8a8b5b36ad022a26279020a76014906e913.json  query-1e370aa0a97e80c96915f2b1a86cb1a7ae1324534c1ef6fb217886f7629249a1.json  query-236dcdc3888202d642538e99e851759964ec13ca3c997d74e80405289515da48.json  query-33358e0b4657cb0fa989cd83e96c27cd34e6ed5b5c092c5ff39ab34a5e30183a.json  query-33b3b151e89513672bf0b489cd268fe60a2b55807aacc7c2b5285934f5fadc99.json  query-382fc8ac0c7f64e5ab5aabe3c7380c8412bbfc1bfc165fac1bb5785135c1711b.json  query-43bcf0e7b4eb6dde0e49d1bb8c07025c3997db4a420d7254e5588d9bf0b58d61.json  query-704c4b63e0745f2f5341096230b169cbfede9eadff33c646188f061c786962b3.json  query-85b224476c867ae0b2be34d845c81b8262988bf5c8b6a163c8c890e21ce1a9fd.json  query-8cff6261148f9b1f0d549c7bcb7d0a697de29ef1f04c0bf20498e4180a13c80e.json  query-8fac6953a598b932e0c7f4a8bd08539df342ae1928533b4c1aec8661ebf30c9d.json  query-9e2825db0a40b2f84e6760bea0e070d554196b0dc8a8acc5e3f314d9c9b98815.json  query-9f4291046fb48b2bd937061080237200fd70a637bd712e82f28dcda325ce1af2.json  query-a4a3a4341010a3e551935a08c8c7cf3782a1550e904f04905f8bdf00c1033a49.json  query-b71c9d1407903d01c27e0c839b2fe99690526f14d70ff573f46ebe38cb2a8175.json  query-bc43b1138f1fa55766df5e8f3db9242515340940f6896d16906dd3026c9ff049.json  query-bcd9553acdf1bdce2de327187d49d21a636922f79e41b8c433b86b7979e81971.json  query-d2b40816abcc26cec625d0a5fda2743968fb512bd457b101cbf2dd278690c884.json  query-d35c4f39ac49491f67fd09b9f4a81ec146cf8d2e9b98126ecfc6b883b183ac73.json  query-d8d73ca2ccde58083a5f35491b31cbecf0730e7817adff9e92a0b7b1df4ae94d.json  query-dc740796de410face52f6bf29865630da0033f336932fde077a66748f7362990.json  query-f981f19da3798c0a6ca886819b15bdc2fb84d60aa394aa23de463b13e7c1d368.json
forum_server/migrations/: 20250116000000_add_banned_users.sql  20250428191213_initial_schema.sql  20250428203755_create_post_images_table.sql  20250430173825_add_unique_constraint_to_category_name.sql  20250501160651_add_order_column.sql  20250501172215_add_polycentric_pointer_to_posts.sql  20250515000000_change_author_id_to_bytea.sql  20250515000001_consolidated_schema.sql
forum_server/src/: auth.rs  config.rs  constants.rs  lib.rs  main.rs  models.rs  seeder.rs  storage.rs  utils.rs
forum_server/src/handlers/: board_handlers.rs  category_handlers.rs  mod.rs  post_handlers.rs  thread_handlers.rs  user_handlers.rs
forum_server/src/repositories/: board_repository.rs  category_repository.rs  mod.rs  post_repository.rs  thread_repository.rs  user_repository.rs
forum_server/src/routes/: post_routes.rs  thread_routes.rs
forum_server/tests/: auth_api.rs  board_api.rs  category_api.rs  post_api.rs  thread_api.rs
forum_server/tests/common/: helpers.rs  mod.rs
polycentric-protocol/: .gitignore  Cargo.toml  build.rs
polycentric-protocol/src/: lib.rs  model.rs  test_utils.rs
server/: .gitignore  Cargo.toml  build.rs
server/src/: config.rs  crypto.rs  cursor.rs  ingest.rs  main.rs  migrate.rs  mod.rs  model.rs  opensearch.rs  postgres.rs
server/src/cache/: interface.rs  mod.rs  util.rs
server/src/handlers/: censor.rs  explore.rs  get_challenge.rs  get_claim_to_system.rs  get_events.rs  get_explore.rs  get_find_claim_and_vouch.rs  get_head.rs  get_health.rs  get_notifications.rs  get_query_index.rs  get_query_latest.rs  get_query_references.rs  get_ranges.rs  get_recommend_profiles.rs  get_replies.rs  mod.rs  (+18 more)
(+135 files in other folders)
