[package]
name = "dm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["tokio", "tracing", "json", "macros", "ws"]}
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"], default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
protobuf = { version = "3.1.0", features = ["bytes"] }
bytes = "1.2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0", features = ["backtrace"] }
base64 = "0.13.0"
once_cell = "1.18"
envconfig = "0.10.0"
futures = "0.3.25"
tokio-tungstenite = "0.20"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
hmac-sha256 = "1.1.4"
rand = "0.8"
constant_time_eq = "0.3.0"
polycentric-protocol = { path = "../polycentric-protocol", features = ["sqlx"] }
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
serial_test = "3.0"

[build-dependencies]
protobuf-codegen = "3.0.3"
protoc-bin-vendored = "3.0.0"

[[bin]]
name = "dm-server"
path = "src/main.rs"