[package]
name = "forum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["fs"] } # For serving static files
futures-util = "0.3"

[dev-dependencies]
# Configure reqwest to use rustls instead of native-tls (which requires OpenSSL dev libs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mime = "0.3"
http-body-util = "0.1"
serde_json = "1.0" # Needed for checking response body
tower = { version = "0.4", features = ["util"] } # For ServiceExt::oneshot
