[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres", "migrate" ] }
warp = "0.3"
protobuf =  { version = "3.1.0", features = ["bytes"] }
bytes = "1.2.0"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
ed25519-dalek = "1.0.1"
rust-crypto = "^0.2"
hmac-sha256 = "1.1.4"
opensearch = { version = "2.0.0", default-features = false, features = ["rustls-tls"] }
base64 = "0.13.0"
log = "0.4"
env_logger = "0.9.0"
rand = "0.7.0"
envconfig = "0.10.0"
futures = "0.3.25"
http = "0.2.8"
anyhow = { version = "1.0", features = ["backtrace"] }

[build-dependencies]
protobuf-codegen = "3.0.3"
